Fixed frame rate for rate < 1 in mov files [2909]